--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.71",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@vis.gl/react-google-maps": "^0.5.0",
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
     "firebase": "^10.7.2",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/google.maps": "^3.55.1",
     "daisyui": "^4.6.0",
     "tailwindcss": "^3.4.1"
   }
