--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.5",
@@ -17,6 +18,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vis.gl/react-google-maps": "^0.5.0",
+    "auth0-lock": "^12.4.0",
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
     "firebase": "^10.7.2",
